Fixed smaller spacing issue

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -8,7 +8,8 @@
   font-weight: 400;
   color: $white-color;
   padding: 0rem 5.6rem;
-  margin-bottom: 3rem;
+  margin: 0;
+
   top: 0;
   left: 0;
   bottom: 0;
